--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pytest>=8.3.5",
     "pyyaml>=6.0.2",
     "redis>=5.2.1",
+    "snowflake-id>=1.0.2",
     "uvicorn>=0.34.1",
 ]
 
