--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "bcrypt>=4.3.0",
+    "dashscope>=1.23.1",
     "dbutils>=3.1.0",
     "fastapi>=0.115.12",
     "langchain>=0.3.23",
+    "langchain-community>=0.3.21",
     "langchain-core>=0.3.52",
     "langchain-deepseek>=0.1.3",
     "pydantic>=2.11.3",
